# jaxprvis

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/: example.py
src/jaxprvis/: __init__.py  jaxprvis.py  math_util.py
src/jaxprvis/graph/: graph.py  jaxpr_to_graph.py
src/jaxprvis/physics/: math_util.py  physics.py
src/jaxprvis/render/: display_assets.py
src/jaxprvis/visualization/: colorcheme.py  display_assets.py  physics.py  simulation.py
