[metadata]
name = jaxprvis
version = 0.0.1
author = Pedro F. Silvestre
author_email = pmfsilvestre@gmail.com
description = A visualizer for JaxPrs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PSilvestre/jaxprvis
project_urls =
    Bug Tracker = https://github.com/PSilvestre/jaxprvis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    #Required by rl-games
    jax>=0.4.0
    jaxlib>=0.4.0
    pygame>=2.4.0
    numpy>=1.24.0

[options.extras_require]
dev = 
    pytest>=7.2
    black>=22.10
    ruff>=0.0.263

[options.packages.find]
where = src